agregue archivo server.js y lo configure

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Custom spa of clickeat with reactjs",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "deploy": "now"
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/TheEnmanuel23/react-clickeat#readme",
   "dependencies": {
+    "express": "^4.15.3",
     "next": "^2.4.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
