--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/TheEnmanuel23/react-clickeat#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "isomorphic-unfetch": "^1.0.0",
     "next": "^2.4.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
